legend-pure-rust/crates/parser/tests/snapshots/test_navigation_path__alias_suffix_on_last_step.snap
---
source: crates/parser/tests/test_navigation_path.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "test",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 14,
                                end_line: 2,
                                end_column: 17,
                            },
                        },
                        type_parameters: [],
                        multiplicity_parameters: [],
                        parameters: [],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "Any",
                                type_arguments: [],
                                multiplicity_arguments: [],
                                type_variable_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 22,
                                    end_line: 2,
                                    end_column: 24,
                                },
                            },
                        ),
                        return_multiplicity: ZeroOrMany,
                        constraints: [],
                        body: [
                            NavigationPath(
                                NavigationPath {
                                    start_type: TypeReference {
                                        package: None,
                                        name: "Product",
                                        type_arguments: [],
                                        multiplicity_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 7,
                                            end_line: 4,
                                            end_column: 13,
                                        },
                                    },
                                    path: [
                                        PropertyPathElement {
                                            property: "synonymsByType",
                                            parameters: [
                                                MemberAccess(
                                                    Simple(
                                                        SimpleMemberAccess {
                                                            target: PackageableElementRef(
                                                                PackageableElementRef {
                                                                    element: PackageableElementPtr {
                                                                        package: None,
                                                                        name: "SynonymType",
                                                                        source_info: SourceInfo {
                                                                            source: "test.pure",
                                                                            start_line: 4,
                                                                            start_column: 30,
                                                                            end_line: 4,
                                                                            end_column: 40,
                                                                        },
                                                                    },
                                                                    source_info: SourceInfo {
                                                                        source: "test.pure",
                                                                        start_line: 4,
                                                                        start_column: 30,
                                                                        end_line: 4,
                                                                        end_column: 40,
                                                                    },
                                                                },
                                                            ),
                                                            member: "CUSIP",
                                                            member_source_info: SourceInfo {
                                                                source: "test.pure",
                                                                start_line: 4,
                                                                start_column: 42,
                                                                end_line: 4,
                                                                end_column: 46,
                                                            },
                                                            source_info: SourceInfo {
                                                                source: "test.pure",
                                                                start_line: 4,
                                                                start_column: 41,
                                                                end_line: 4,
                                                                end_column: 41,
                                                            },
                                                        },
                                                    ),
                                                ),
                                            ],
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 4,
                                                start_column: 14,
                                                end_line: 4,
                                                end_column: 14,
                                            },
                                        },
                                        PropertyPathElement {
                                            property: "value",
                                            parameters: [],
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 4,
                                                start_column: 48,
                                                end_line: 4,
                                                end_column: 48,
                                            },
                                        },
                                    ],
                                    name: Some(
                                        "cusip",
                                    ),
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 5,
                                        end_line: 4,
                                        end_column: 6,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 5,
                            end_column: 1,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
