legend-pure-rust/crates/parser/tests/snapshots/test_navigation_path__property_with_collection_parameter.snap
---
source: crates/parser/tests/test_navigation_path.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "test",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 14,
                                end_line: 2,
                                end_column: 17,
                            },
                        },
                        type_parameters: [],
                        multiplicity_parameters: [],
                        parameters: [],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "Any",
                                type_arguments: [],
                                multiplicity_arguments: [],
                                type_variable_values: [],
                                algebra_ops: [],
                                subset_bound: None,
                                equal_binding: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 22,
                                    end_line: 2,
                                    end_column: 24,
                                },
                            },
                        ),
                        return_multiplicity: ZeroOrMany,
                        constraints: [],
                        body: [
                            NavigationPath(
                                NavigationPath {
                                    start_type: TypeReference {
                                        package: None,
                                        name: "Person",
                                        type_arguments: [],
                                        multiplicity_arguments: [],
                                        type_variable_values: [],
                                        algebra_ops: [],
                                        subset_bound: None,
                                        equal_binding: None,
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 7,
                                            end_line: 4,
                                            end_column: 12,
                                        },
                                    },
                                    path: [
                                        PropertyPathElement {
                                            property: "nameWithPrefixAndSuffix",
                                            parameters: [
                                                Literal(
                                                    String(
                                                        StringLiteral {
                                                            value: "a",
                                                            source_info: SourceInfo {
                                                                source: "test.pure",
                                                                start_line: 4,
                                                                start_column: 38,
                                                                end_line: 4,
                                                                end_column: 40,
                                                            },
                                                        },
                                                    ),
                                                ),
                                                Collection(
                                                    CollectionExpr {
                                                        elements: [
                                                            Literal(
                                                                String(
                                                                    StringLiteral {
                                                                        value: "x",
                                                                        source_info: SourceInfo {
                                                                            source: "test.pure",
                                                                            start_line: 4,
                                                                            start_column: 44,
                                                                            end_line: 4,
                                                                            end_column: 46,
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                            Literal(
                                                                String(
                                                                    StringLiteral {
                                                                        value: "y",
                                                                        source_info: SourceInfo {
                                                                            source: "test.pure",
                                                                            start_line: 4,
                                                                            start_column: 49,
                                                                            end_line: 4,
                                                                            end_column: 51,
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                        ],
                                                        multiplicity: None,
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 4,
                                                            start_column: 43,
                                                            end_line: 4,
                                                            end_column: 43,
                                                        },
                                                    },
                                                ),
                                            ],
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 4,
                                                start_column: 13,
                                                end_line: 4,
                                                end_column: 13,
                                            },
                                        },
                                    ],
                                    name: None,
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 5,
                                        end_line: 4,
                                        end_column: 6,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 5,
                            end_column: 1,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
